src/test/deca/context/valid/plus_floatvar_int_plus_float_context.deca
// Description :
//
//      Test contextuellement correct de la somme d'un int et d'un float dans une variable float
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03


{
    float y=2+3.5;
}