src/test/deca/context/invalid/plus_floatvar_string_plus_float_context.deca
// Description :
//
//      Test contextuellement incorrect de la somme d'un string et d'un float dans une variable float
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    float y= "Bonjour"+3.5;
}